manifest/expresscart-Config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: expresscart

---
# Namespace for Prometheus and Grafana for server monitoring
# Deploy the Prometheus Operator via Helm chart
apiVersion: v1
kind: Namespace
metadata:
  name: prometheusstack

---
