manifest/externalDNS.yml
# Create ExternalDNS deployment which updated to the DNS server
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    name: external-dns

---

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.5
        args:
        - --provider=rfc2136
        - --rfc2136-host=192.168.0.254
        - --rfc2136-port=53
        - --rfc2136-zone=lab
        - --rfc2136-insecure
        - --rfc2136-tsig-axfr 			# needed to enable zone transfers, which is required for deletion of records.
        - --source=ingress
        - --source=service
        - --domain-filter=lab
        - --interval=30s
#        - --log-level=debug			  # debug only

---
