manifest/platformConfig.yaml
---
# Network service for mapping to Cilium Hubble UI
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui-ext
  labels:
       role: monitor
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.lab
spec:
  loadBalancerIP: 192.168.89.100
  type: LoadBalancer
  selector:
    k8s-app: hubble-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
# Network service for mapping to Grafana UI
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana-ext
  labels:
       role: monitor
  namespace: prometheus-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.lab
spec:
  loadBalancerIP: 192.168.89.101
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
# Network service for mapping to Prometheus UI
apiVersion: v1
kind: Service
metadata:
  name: prometheus-prometheus-ext
  labels:
       role: monitor
  namespace: prometheus-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.lab
spec:
  loadBalancerIP: 192.168.89.102
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090

---
# Network service for mapping to Prometheus AlertManager UI
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alertmanager-ext
  labels:
       role: monitor
  namespace: prometheus-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: alertmanager.lab
spec:
  loadBalancerIP: 192.168.89.103
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: alertmanager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9093

---
# Network service for mapping to ArgoCD UI
apiVersion: v1
kind: Service
metadata:
  name: argocd-ext
  labels:
       role: monitor
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.lab
spec:
  loadBalancerIP: 192.168.89.104
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080

---
